Journal page changes from vhs

--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -6436,10 +6436,11 @@ a.archvDel {
 a.archvDel:hover ul {
     display: block !important;
 }
-
+.darkTheme .entryBoxCntnt {
+    background-color: #404646!important;
+}
 .entryBoxCntnt {
     width: 460px;
-    background: #fff;
     margin: 0 auto;
     border: none;
     outline: none;
@@ -17257,7 +17258,7 @@ ul.duringCovid li:last-child {
     width: 162px;
     border: 1px solid #BFC1C1;
     border-radius: 4px;
-    background-color: transparent;
+    background-color: #192020;
     color: #7F8383;
     font-size: 14px;
     margin-left: 10px;
