--- a/src/assets/css/virtual_hospital.css
+++ b/src/assets/css/virtual_hospital.css
@@ -2903,7 +2903,16 @@ a.lineSort {
 .entryInfoActv label {
     color: #00ABAF !important;
 }
-@media (max-width: 1200px){
+
+@media screen and (min-width: 640px) and (max-width: 1200px){
+    .archvOpinionIner td.pivoted {
+        padding: 10px !important;
+    }
+    .billInfoData td {
+        padding: 10px !important;
+    }
+}
+@media (max-width: 1200px) {
     .asignStaf {
         margin-left: 10px;
         margin-right: 10px;
@@ -5796,7 +5805,7 @@ button.downloadPDF:hover {
     font-weight: 600;
     letter-spacing: 0;
     line-height: 18px;
-    padding: 10px 42px;
+    padding: 10px 45px;
     font-family: Muli;
 }
 .patentPic img {
@@ -9836,6 +9845,25 @@ button.crdoLghtBlu2 {
     border-bottom: none;
 }
 /* Added by Ankita */
+.filterAtright{
+    text-align:right;
+    margin-top:10px !important;
+    margin-bottom: -20px !important;
+}
+.darkTheme .cntryDrop div:first-child:hover{
+    background-color: 404646 !important;
+}
+img.academyDots {
+    padding: 3px !important;
+    border: 1px solid #7e8282 !important;
+    width: 25px !important;
+    border-radius: 8px !important;
+    height: auto !important;
+}
+img.manage-size {
+    width: 44px;
+    padding: 12px;
+}
 .darkTheme .profile-language.css-2b097c-container div, .homeBgDrk .profile-language.css-2b097c-container div{
     background-color: #404646 !important;
     color: #fff !important;
@@ -9877,6 +9905,7 @@ img.vdoCalNow {
 a.newacademyul ul li img
 {
  height: 20px!important;
+ padding:5px;
 }
 
 .darkTheme .profilMenuList2 li a img {
