jira ticket -> loader at invoice page

--- a/src/assets/css/virtual_hospital.css
+++ b/src/assets/css/virtual_hospital.css
@@ -9851,6 +9851,21 @@ button.crdoLghtBlu2 {
     border-bottom: none;
 }
 /* Added by Ankita */
+.homeBgDrk .ant-picker-header-super-prev-btn,.homeBgDrk .ant-picker-super-prev-icon,
+.homeBgDrk .ant-picker-next-icon, .homeBgDrk .ant-picker-header-super-next-btn,
+.homeBgDrk table.ant-picker-content thead tr th, .homeBgDrk table.ant-picker-content thead tr td{
+    color:#f2f2f2!important;
+}
+.homeBgDrk .ant-picker-range-arrow:after{
+    border-color: #404646 #404646 transparent transparent !important;
+}
+.homeBgDrk .dashBoxCntnt, .homeBgDrk .ant-picker-panel-container{
+    background-color: #404646 !important;
+}
+.ant-picker-suffix > * {
+    vertical-align: top;
+    margin-left: -20px !important;
+}
 .filterAtright{
     text-align:right;
     margin-top:10px !important;
